2003-03-30  Matthias Clasen  <maclas@gmx.de>

	* glib/gutf8.c (UNICODE_VALID): Update to Unicode 3.1 and optimize
	a bit.  (#107427, Noah Lewitt)

	* glib/libcharset/config.charset: Add cp1251 support for Solaris.
	(#104738, Hidetoshi Tajima)

	* glib/gconvert.c (UnsafeCharacterSet): Get rid of
	UNSAFE_DOS_PATH.
	(acceptable): Align with RFC2396.  (#59653)

	* tests/uri-test.c: Adjust to the changes above.

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-19  Matthias Clasen  <maclas@gmx.de>

	* glib/giochannel.c (g_io_channel_read_to_end): Fix docs.

2003-03-19  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Bump version to 2.3.0

2003-03-14  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gthread.c: Do not define function g_thread_init_glib, if
	not G_THREADS_ENABLED. It's not called bu g_thread_init() then,
	but calls other, in that case undefined functions.

2003-03-06  Matthias Clasen  <maclas@gmx.de>

	* glib/gmain.c (g_main_context_find_source_by_id): 
	(g_main_context_find_source_by_funcs_user_data): Fix FALSE/NULL
	confusion.  (#107646, Morten Welinder)

2003-03-01  James Henstridge  <james@daa.com.au>

	* autogen.sh: require automake 1.7.  Add calls to libtoolize and
	gtkdocize.  Clean up some of the error messages.

	* configure.in: move version declaration to the top of the file
	(before AC_INIT), using M4 macros.
	GLIB_AC_DIVERT_BEFORE_HELP() calls no longer necessary, due to use
	of M4 macro expansion in help messages instead.
	Convert AC_ARG_WITH/AC_ARG_ENABLE calls to use AC_HELP_STRING to
	format help strings.  Use quadrigraphs to get square brackets to
	show correctly.
	Replace gtk-doc checks with a call to GTK_DOC_CHECK() macro.
	Use AC_CONFIG_COMMANDS([glibconfig.h], ...) to output
	glibconfig.h, so that "./config.status glibconfig.h" works.
	Add an extra AC_CONFIG_FILES call listing other files we want
	generated by config.status protected by an "if false" block.  This